# vgg_face_search

./: .gitignore  LICENSE.md  README.md
docker/: Dockerfile  vfs-cpu  vfs-gpu
install/: README.md  install_mac.sh  install_mac_cpu.sh  install_mac_gpu.sh  install_ubuntu.sh  install_ubuntu_cpu.sh  install_ubuntu_gpu.sh
pipeline/: CMakeLists.txt  README.md  compute_pos_features.py  compute_pos_features_video.py  start_pipeline.bat  start_pipeline.sh
pipeline/detect_shots/: detect_shots.cpp  detect_shots.py  hist_col.cpp  hist_col.hpp  hist_sift.cpp  hist_sift.hpp  jp_img.hpp  jp_jpeg.hpp
service/: README.md  backend.py  databaseutils.py  face_detection_dlib.py  face_detection_facenet.py  face_detection_faster_rcnn.py  face_detection_retinaface.py  face_features.py  face_retrieval.py  imutils.py  kdutils.py  settings.py  start_backend_service.bat  start_backend_service.sh
service/deprecated/: face_detection_dlib.py  face_detection_facenet.py
test/: README.md  test.py
